# AQUA-diagnostics

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  codecov.yml  environment-dev.yml  environment-pypi.yml  environment.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 00-question.yml  01-bug-report.yml  02-discussion.yml  03-feature-request.yml
.github/PULL_REQUEST_TEMPLATE/: standard_pull_request.md  version_release.md
.github/workflows/: aqua-diagnostics-complete.yml  aqua-diagnostics-cross-check.yml  aqua-diagnostics-pypi.yml  aqua-diagnostics-ruff.yml  aqua-diagnostics-test-reusable.yml  aqua-diagnostics.yml  create-container-from-tag.yml  pypi-publish.yml
aqua/: __init__.py
aqua/diagnostics/: __init__.py  version.py
cli/hpc2020-install/: hpc2020_install_dev.sh
cli/lumi-install/: environment_lumi.yml  lumi_install.sh  pip_lumi.txt
dockerfiles/: Dockerfile.aqua-diagnostics
frontier-diagnostics/acc/: pyproject.toml
frontier-diagnostics/acc/acc/: __init__.py  acc.py
frontier-diagnostics/acc/cli/: acc_cli.py
frontier-diagnostics/acc/config/: config.yaml
frontier-diagnostics/amo/: pyproject.toml
frontier-diagnostics/amo/amo/: __init__.py  amo.py
frontier-diagnostics/amo/cli/: amo_cli.py
frontier-diagnostics/amo/config/: config.yaml
frontier-diagnostics/cov/: pyproject.toml
frontier-diagnostics/cov/cli/: cov_cli.py
frontier-diagnostics/cov/config/: config.yaml
frontier-diagnostics/cov/cov/: __init__.py  cov.py
frontier-diagnostics/global_biases_significance/: cli_global_biases.py  global_biases.py  plot_global_biases.py
frontier-diagnostics/ipo/: pyproject.toml
frontier-diagnostics/ipo/cli/: ipo_cli.py
frontier-diagnostics/ipo/config/: config.yaml
frontier-diagnostics/ipo/ipo/: __init__.py  ipo.py
frontier-diagnostics/psd/: pyproject.toml
frontier-diagnostics/psd/cli/: psd_cli.py
frontier-diagnostics/psd/config/: config.yaml
frontier-diagnostics/psd/psd/: __init__.py  psd.py
frontier-diagnostics/rmse/: pyproject.toml
frontier-diagnostics/rmse/cli/: rmse_cli.py
frontier-diagnostics/rmse/config/: config.yaml
frontier-diagnostics/rmse/rmse/: __init__.py  rmse.py
frontier-diagnostics/rollout/: pyproject.toml
frontier-diagnostics/rollout/cli/: rollout_cli.py
frontier-diagnostics/rollout/config/: config.yaml
frontier-diagnostics/rollout/rollout/: __init__.py  rollout.py
frontier-diagnostics/seasonal_cycle/: pyproject.toml
frontier-diagnostics/seasonal_cycle/cli/: seasonal_cycle_cli.py
frontier-diagnostics/seasonal_cycle/config/: config.yaml
frontier-diagnostics/seasonal_cycle/seasonal_cycle/: __init__.py  seasonal_cycle.py
frontier-diagnostics/spatial_agg/: pyproject.toml
frontier-diagnostics/spatial_agg/cli/: spatial_agg_cli.py
frontier-diagnostics/spatial_agg/config/: config.yaml
frontier-diagnostics/spatial_agg/spatial_agg/: __init__.py  spatial_agg.py
frontier-diagnostics/spatiotemporal_rollout/: pyproject.toml
frontier-diagnostics/spatiotemporal_rollout/cli/: spatiotemporal_rollout_cli.py
frontier-diagnostics/spatiotemporal_rollout/config/: config.yaml
frontier-diagnostics/spatiotemporal_rollout/spatiotemporal_rollout/: __init__.py  spatiotemporal_rollout.py
frontier-diagnostics/tropical_cyclones/: README.md  environment-tcs.yml  pyproject.toml
frontier-diagnostics/tropical_cyclones/cli/: README.md  config_tcs_cli.yaml  run_TCs_LEVANTE.job  run_TCs_LUMI.job  tropical_cyclones_cli.py
frontier-diagnostics/tropical_cyclones/config/: config_tcs.yaml
frontier-diagnostics/tropical_cyclones/notebooks/: config_tcs_notebook.yaml  tropical_cyclones.ipynb  tropical_cyclones_era5.ipynb
frontier-diagnostics/tropical_cyclones/scripts/: tc_parallel.sh  tcs_detect.sh  tcs_stitch.sh
frontier-diagnostics/tropical_cyclones/tests/: tester.yml  verify_detect.py
frontier-diagnostics/tropical_cyclones/tropical_cyclones/: __init__.py  aqua_dask.py  cli_tropical_cyclones.py  detect_nodes.py  stitch_nodes.py  tropical_cyclones.py
frontier-diagnostics/tropical_cyclones/tropical_cyclones/plots/: __init__.py  plotting_TCs.py  plotting_hist.py
frontier-diagnostics/tropical_cyclones/tropical_cyclones/tools/: __init__.py  tcs_utils.py  tempest_utils.py
frontier-diagnostics/tropical_rainfall/: README.md  pyproject.toml
frontier-diagnostics/tropical_rainfall/cli/: cli_tropical_rainfall.py
frontier-diagnostics/tropical_rainfall/cli/src/: tropical_rainfall_cli_class.py  tropical_rainfall_utils.py
frontier-diagnostics/tropical_rainfall/notebooks/: demo_for_lowres_data.ipynb  for_live_demonstration.ipynb
frontier-diagnostics/tropical_rainfall/notebooks/functions_demo/: data_attributes.ipynb  diagnostic_vs_streaming.ipynb  histogram_calculation.ipynb  histogram_plotting.ipynb
frontier-diagnostics/tropical_rainfall/tropical_rainfall/: __init__.py  config-tropical-rainfall.yml  tropical_rainfall_class.py
frontier-diagnostics/tropical_rainfall/tropical_rainfall/src/: tropical_rainfall_main.py  tropical_rainfall_meta.py  tropical_rainfall_plots.py  tropical_rainfall_tools.py
frontier-diagnostics/variability/: pyproject.toml
frontier-diagnostics/variability/cli/: variability_cli.py
frontier-diagnostics/variability/config/: config.yaml
frontier-diagnostics/variability/variability/: __init__.py  variability.py
frontier-diagnostics/vertical_zonal_mean/: pyproject.toml
frontier-diagnostics/vertical_zonal_mean/cli/: vertical_zonal_mean_cli.py
frontier-diagnostics/vertical_zonal_mean/config/: config.yaml
frontier-diagnostics/vertical_zonal_mean/vertical_zonal_mean/: __init__.py  vertical_zonal_mean.py
frontier-diagnostics/zonal_mean_profile/: pyproject.toml
frontier-diagnostics/zonal_mean_profile/cli/: zonal_mean_profile_cli.py
frontier-diagnostics/zonal_mean_profile/config/: config.yaml
frontier-diagnostics/zonal_mean_profile/zonal_mean_profile/: __init__.py  zonal_mean_profile.py
tests/: conftest.py  shared_constants.py  test_output-saver.py
tests/cli/: conftest.py  (+11 more)
(+395 files in other folders)
