[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# For setuptools: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "aqua-diagnostics"
dynamic = ["version"]
authors = [ # AQUA core team reported here
    {name = "Paolo Davini", email = "paolo.davini@cnr.it"},
    {name = "Matteo Nurisso", email = "m.nurisso@isac.cnr.it"},
    {name = "Silvia Caprioli", email = "silvia.caprioli@polito.it"},
    {name = "Jost von Hardenberg", email = "jost.hardenberg@polito.it"},
    {name = "Emanuele Tovazzi", email = "emanueletovazzi@cnr.it"},
    {name = "Marco Cadau", email = "marco.cadau@polito.it"},
    {name = "Supriyo Ghosh", email = "supriyo.ghosh@bsc.es"},
    {name = "Maqsood Mubarak Rajput", email = "maqsoodmubarak.rajput@awi.de"}
]
description = "AQUA-diagnostics: the diagnostics set of the AQUA framework for high-resolution climate model evaluation"
readme = "README.md"
keywords = ["climate", "modeling", "diagnostics", "high-resolution"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "ECmean4==0.1.15",
    "aqua @ git+https://github.com/DestinE-Climate-DT/AQUA.git" 
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]
notebooks = [
    "ipykernel",
    "healpy"
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "coverage",
    "cdo"
]
all = [
    "aqua-diagnostics[docs]",
    "aqua-diagnostics[notebooks]",
    "aqua-diagnostics[tests]"
]

[project.urls]
homepage = "https://github.com/DestinE-Climate-DT/AQUA-diagnostics/"
documentation = "https://aqua.readthedocs.io/en/latest/index.html"
repository = "https://github.com/DestinE-Climate-DT/AQUA-diagnostics/"
issues = "https://github.com/DestinE-Climate-DT/AQUA-diagnostics/issues/"

[tool.setuptools.package-data]
platforms = ["any"]

[tool.setuptools.package-dir]
"aqua.diagnostics" = "aqua/diagnostics/src"

[tool.setuptools.dynamic]
version = {attr = "aqua.diagnostics.version.__version__"}

[tool.pytest.ini_options]
# verbose to have full test, run coverage on src folder and use pyproject as a configuration file
addopts = "--durations=10 -v --cov=aqua" 
testpaths = [
    "tests"
]
markers = [
    #"aqua: mark test as AQUA framework",
    #"slow: tests which are slow",
    #"sbatch: tests which require sbatch",
    #"graphics: tests which deal with graphics",
    #"gsv: mark test that requires ECMWF FDB libraries",
    "diagnostics: single marker for all diagnostics",
    #"catgen: mark test for catalog generator",
    "ensemble: pytest for ensemble diagnostic"
]

[tool.coverage.run]
branch = true
command_line = '-m pytest tests'
source = ["aqua/diagnostics/src"]
omit = [
    "tests/*", 
    "**/__init__.py",
    "aqua/diagnostics/src/dummy"
    ]

