[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amo"
version = "0.1.0"
description = "Atlantic Multidecadal Oscillation diagnostic"
readme = "README.md"
keywords = ["AMO", "atlantic", "oscillation", "diagnostics"]
license = {text = "Private"}
dependencies = [
    "xarray",
    "numpy",
    "matplotlib",
    "scipy"
]

[tool.setuptools.packages]
find = {}
