[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rmse"
version = "0.1.0"
description = "Root Mean Square Error diagnostic"
readme = "README.md"
keywords = ["RMSE", "error", "verification", "diagnostics"]
license = {text = "Private"}
dependencies = [
    "xarray",
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages]
find = {}
