[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial_agg"
version = "0.1.0"
description = "Spatial Aggregation diagnostic"
readme = "README.md"
keywords = ["spatial", "aggregation", "diagnostics"]
license = {text = "Private"}
dependencies = [
    "xarray",
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages]
find = {}
