[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatiotemporal_rollout"
version = "0.1.0"
description = "Spatiotemporal Rollout diagnostic"
readme = "README.md"
keywords = ["spatiotemporal", "rollout", "diagnostics"]
license = {text = "Private"}
dependencies = [
    "xarray",
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages]
find = {}
