[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tropical_rainfall"
version = "0.0.1"
description = "A Python package for analyzing tropical rainfall data."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "Natalia Nazarova", email = "natalia.nazarova@polito.it" }]
keywords = ["climate", "meteorology", "rainfall", "data-analysis"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
license = {text = "MIT License"}
dependencies = [
    "fast-histogram",
]

[tool.setuptools.package-data]
platforms = ["any"]
tropical_rainfall = ["config-tropical-rainfall.yml"]

[tool.setuptools.dynamic]
version = { attr = "tropical_rainfall.__version__" }

[tool.setuptools.packages]
find={}
