[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zonal_mean_profile"
version = "0.1.0"
description = "Zonal mean profile diagnostic for comparing emulator and reference model"
dependencies = [
    "xarray",
    "numpy",
    "matplotlib",
    "pyyaml",
]
